--- a/STM32 Stuff/Debug/makefile
+++ b/STM32 Stuff/Debug/makefile
@@ -65,8 +65,8 @@ all: main-build
 main-build: STM\ 32\ External\ Storage.elf secondary-outputs
 
 # Tool invocations
-STM\ 32\ External\ Storage.elf: $(OBJS) $(USER_OBJS) C:\Users\bobox\Documents\_Documents\ece395\STM32\ Stuff\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "STM 32 External Storage.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\bobox\Documents\_Documents\ece395\STM32 Stuff\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM 32 External Storage.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM\ 32\ External\ Storage.elf: $(OBJS) $(USER_OBJS) E:\Documents\_Stuff\_School\Senior\first_sem\ece395\STM32\ Stuff\STM32F407VGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "STM 32 External Storage.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\Documents\_Stuff\_School\Senior\first_sem\ece395\STM32 Stuff\STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM 32 External Storage.map" -Wl,--gc-sections -static -u _printf_float --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
